--- a/styles/css/contact.css
+++ b/styles/css/contact.css
@@ -5,13 +5,9 @@
   margin: 0;
   padding: 0;
   background-color: #24252a;
-  font-family: "Signika Negative";
+  font-family: "Signika Negative", serif;
   color: white;
   text-decoration: none;
-}
-
-* ::-webkit-scrollbar {
-  display: none;
 }
 
 button {
@@ -90,10 +86,9 @@ header {
 }
 
 .logo__font {
-  padding: 5px;
   border-radius: 5px;
   font-size: 40px;
-  padding-left: 10px;
+  padding: 5px 5px 5px 10px;
 }
 
 .logo__font:hover {
@@ -110,7 +105,7 @@ header {
 
 .nav__links li {
   display: inline-block;
-  padding: 0px 20px;
+  padding: 0 20px;
 }
 
 .nav__links li a {
@@ -128,7 +123,7 @@ header {
 }
 
 @media (max-width: 768px) {
-  .fa {
+  .fab {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -139,7 +134,7 @@ header {
   }
 }
 
-.fa {
+.fab {
   padding: 5px;
   margin: 4px;
   font-size: 30px;
@@ -157,12 +152,12 @@ header {
           justify-content: space-evenly;
 }
 
-.fa li a {
+.fab li a {
   -webkit-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
 }
 
-.fa li a:hover {
+.fab li a:hover {
   color: #05ffff;
   border-radius: 5px;
   -webkit-box-shadow: -3px -3px 6px #05ffff, 3px 3px 6px black;
@@ -173,7 +168,7 @@ header {
   .bottom_links li {
     margin-bottom: 30px;
     display: inline-block;
-    padding: 0px 20px;
+    padding: 0 20px;
   }
 }
 
@@ -197,7 +192,6 @@ footer {
       -ms-flex-direction: column;
           flex-direction: column;
   text-align: center;
-  list-style: none;
   font-size: 30px;
   -webkit-transform: translate(-30px, 0px);
           transform: translate(-30px, 0px);
@@ -206,7 +200,7 @@ footer {
 
 .bottom_links li {
   display: inline-block;
-  padding: 0px 20px;
+  padding: 0 20px;
 }
 
 .bottom_links li a {
